--- a/nlp4j/nlp4j-web-app/src/main/webapp/komeda2023.html
+++ b/nlp4j/nlp4j-web-app/src/main/webapp/komeda2023.html
@@ -53,6 +53,9 @@ var filter_todofuken = new Array();
 
 var todofuken = "";
 
+var date = new Date();
+var today = (date.getFullYear() * 10000) + (date.getMonth()+1) * 100 + date.getDate();
+
 data_komeda.forEach(function(d,idx){
 	// console.log(d);
 	{
@@ -77,14 +80,14 @@ data_komeda.forEach(function(d,idx){
 	o.tel = d["TEL"];
 	o.bikou = d["備考"];
 	o.eigyojikan = ""
-		+ "12/28 "+ d["1228_1"] + " - " + d["1228_2"] + "<br/>"
-		+ "12/29 "+ d["1229_1"] + " - " + d["1229_2"] + "<br/>"
-		+ "12/30 "+ d["1230_1"] + " - " + d["1230_2"] + "<br/>"
-		+ "12/31 "+ d["1231_1"] + " - " + d["1231_2"] + "<br/>"
-		+ "1/1 "+ d["0101_1"] + " - " + d["0101_2"] + "<br/>"
-		+ "1/2 "+ d["0102_1"] + " - " + d["0102_2"] + "<br/>"
-		+ "1/3 "+ d["0103_1"] + " - " + d["0103_2"] + "<br/>"
-		+ "1/4 "+ d["0104_1"] + " - " + d["0104_2"] + "<br/>"
+		+ "12/28 "+ d["1228_1"] + " - " + d["1228_2"] + ( (today == 20221228) ? " 👈本日" : "" ) + "<br/>"
+		+ "12/29 "+ d["1229_1"] + " - " + d["1229_2"] + ( (today == 20221229) ? " 👈本日" : "" ) + "<br/>"
+		+ "12/30 "+ d["1230_1"] + " - " + d["1230_2"] + ( (today == 20221230) ? " 👈本日" : "" ) + "<br/>"
+		+ "12/31 "+ d["1231_1"] + " - " + d["1231_2"] + ( (today == 20221231) ? " 👈本日" : "" ) + "<br/>"
+		+ "1/1 "+ d["0101_1"] + " - " + d["0101_2"] + ( (today == 20230101) ? " 👈本日" : "" ) + "<br/>"
+		+ "1/2 "+ d["0102_1"] + " - " + d["0102_2"] + ( (today == 20230102) ? " 👈本日" : "" ) + "<br/>"
+		+ "1/3 "+ d["0103_1"] + " - " + d["0103_2"] + ( (today == 20230103) ? " 👈本日" : "" ) + "<br/>"
+		+ "1/4 "+ d["0104_1"] + " - " + d["0104_2"] + ( (today == 20230104) ? " 👈本日" : "" ) + "<br/>"
 		;
 	// 	o.eigyojikan = "";
 	o.data1 =
@@ -215,7 +218,7 @@ $(document).ready(function() {
 
 </head>
 <body>
-
+<div>公式のコメダ珈琲店の公式年末年始営業時間は<a href="https://www.komeda.co.jp/news/detail.html?cat=3&article=1029" target="_blank">こちら</a></div>
 <h1>【非公式】コメダ珈琲店 年末年始営業時間 2023</h1>
 
 <select id="filter1">
